Added proper gird layout for products

--- a/wp-content/themes/cocktails/frontend-source/src/components/products/products.scss
+++ b/wp-content/themes/cocktails/frontend-source/src/components/products/products.scss
@@ -1,25 +1,27 @@
 @import '../../styles/libs/_mixin.scss';
 
 .products {
+    overflow: hidden;
 
     &-header {
 
     }
 
-    display: grid;
-    grid-column-gap: 15px;
+    &-wrapper {
+        width: 100%;
+        display: grid;
 
-    @include media-breakpoint-up(sm) {
-        grid-template-columns: repeat(2, 1fr);
+        @include media-breakpoint-up(sm) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    
+        @include media-breakpoint-up(md) {
+            grid-template-columns: repeat(3, 1fr);
+        }
+    
+        @include media-breakpoint-up(lg) {
+            grid-template-columns: repeat(4, 1fr);
+        }
     }
-
-    @include media-breakpoint-up(md) {
-        grid-template-columns: repeat(3, 1fr);
-    }
-
-    @include media-breakpoint-up(lg) {
-        grid-template-columns: repeat(4, 1fr);
-    }
-
 
 }
