--- a/wp-content/themes/cocktails/frontend-source/src/components/products/product-details.scss
+++ b/wp-content/themes/cocktails/frontend-source/src/components/products/product-details.scss
@@ -1,7 +1,7 @@
 @import '../../styles/libs/_mixin.scss';
 
 .product {
-    margin-bottom: 25px;
+    // margin-bottom: 25px;
     width: 100%;
 
     a {
@@ -10,18 +10,22 @@
     
     &-img {
         width: 100%;
-        height: 332px;
+        height: 100vw;
 
         @include media-breakpoint-up(sm) {
-            height: 260px;
+            height: 50vw;
         }
 
         @include media-breakpoint-up(md) {
-            height: 245px;
+            height: 33.3333vw;
         }
 
-        @include media-breakpoint-up(md) {
-            height: 255px;
+        @include media-breakpoint-up(lg) {
+            height: 25vw;
+        }
+
+        @include media-breakpoint-up(xl) {
+            height: calc(1140px / 4);
         }
 
         img {
@@ -33,5 +37,36 @@
 
     &-name, &-distiller {
         text-align: center;
+    }
+
+
+    &:nth-of-type(10n+5), &:nth-of-type(10n+6) {
+        .product-img {
+            @include media-breakpoint-up(lg) {
+                height: 50vw;
+            }
+
+            @include media-breakpoint-up(xl) {
+                height: calc(1140px / 2);
+            }
+        }
+    }
+    
+    &:nth-of-type(10n+5) {
+        @include media-breakpoint-up(lg) {
+            grid-column-start: 3;
+            grid-column-end: 5;
+            grid-row-start: 1;
+            grid-row-end: 3;
+        }
+    }
+
+    &:nth-child(10n+6) {
+        @include media-breakpoint-up(lg) {
+            grid-column-start: 1;
+            grid-column-end: 3;
+            grid-row-start: 3;
+            grid-row-end: 5;
+        }
     }
 }
