--- a/wp-content/themes/cocktails/frontend-source/src/components/products/product-details.scss
+++ b/wp-content/themes/cocktails/frontend-source/src/components/products/product-details.scss
@@ -1,7 +1,7 @@
 @import '../../styles/libs/_mixin.scss';
+@import '../../styles/components/_variables.scss';
 
 .product {
-    // margin-bottom: 25px;
     width: 100%;
 
     a {
@@ -29,7 +29,7 @@
         }
 
         img {
-            object-fit: cover;
+            object-fit: contain;
             width: 100%;
             height: 100%;
         }
@@ -37,36 +37,75 @@
 
     &-name, &-distiller {
         text-align: center;
+        color: $copper;
     }
 
+        &-name {
+            font-family: 'Appareo';
+        }
 
-    &:nth-of-type(10n+5), &:nth-of-type(10n+6) {
-        .product-img {
-            @include media-breakpoint-up(lg) {
-                height: 50vw;
-            }
+    &-details {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: $blue;
+        padding: 30px;
+        opacity: 0;
+        @include transition;
 
-            @include media-breakpoint-up(xl) {
-                height: calc(1140px / 2);
-            }
+    }
+
+    &:hover {
+        .product-details {
+            opacity: 1;
         }
     }
+
+
+    &-link {
+        width: 100%;
+        
+        &:nth-of-type(10n+5), &:nth-of-type(10n+6) {
+            .product-img {
+                @include media-breakpoint-up(lg) {
+                    height: 50vw;
+                }
     
-    &:nth-of-type(10n+5) {
-        @include media-breakpoint-up(lg) {
-            grid-column-start: 3;
-            grid-column-end: 5;
-            grid-row-start: 1;
-            grid-row-end: 3;
+                @include media-breakpoint-up(xl) {
+                    height: calc(1140px / 2);
+                }
+            }
+
+            .product-name {
+                @include fontsize(28);
+                @include letterspacing(3);
+                @include lineheight(28, 1.35);
+            }
+        }
+        
+        &:nth-of-type(10n+5) {
+            @include media-breakpoint-up(lg) {
+                grid-column-start: 3;
+                grid-column-end: 5;
+                grid-row-start: 1;
+                grid-row-end: 3;
+            }
+        }
+    
+        &:nth-child(10n+6) {
+            @include media-breakpoint-up(lg) {
+                grid-column-start: 1;
+                grid-column-end: 3;
+                grid-row-start: 3;
+                grid-row-end: 5;
+            }
         }
     }
 
-    &:nth-child(10n+6) {
-        @include media-breakpoint-up(lg) {
-            grid-column-start: 1;
-            grid-column-end: 3;
-            grid-row-start: 3;
-            grid-row-end: 5;
-        }
-    }
 }
