--- a/wp-content/themes/cocktails/frontend-source/src/components/products/products.scss
+++ b/wp-content/themes/cocktails/frontend-source/src/components/products/products.scss
@@ -1,10 +1,50 @@
 @import '../../styles/libs/_mixin.scss';
+@import '../../styles/components/_variables.scss';
 
 .products {
     overflow: hidden;
 
     &-header {
+        height: 600px;
+        margin-bottom: 70px;
 
+        @include media-breakpoint-down(sm) {
+            height: 250px;
+        }
+
+        @include media-breakpoint-down(md) {
+            height: 300px;
+        }
+
+        @include media-breakpoint-down(lg) {
+            height: 350px;
+        }
+        
+        img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #000;
+            opacity: 0.6;
+        }
+
+        h1 {
+            text-align: center;
+            color: $copper;
+            top: 50%;
+            transform: translateY(-50%);
+        }
     }
 
     &-wrapper {
