--- a/wp-content/themes/cocktails/frontend-source/src/styles/components/_variables.scss
+++ b/wp-content/themes/cocktails/frontend-source/src/styles/components/_variables.scss
@@ -1,7 +1,7 @@
 /////////////////////////////////////////////
 // SASS Globals Variables
 /////////////////////////////////////////////
-$base_url: 'http://cocktails.spiritandpenance.com/wp-content/themes/cocktails';
+$base_url: 'http://cocktails.development/wp-content/themes/cocktails';
 $nav-height      : 50px;
 $footer-height   : 186px;
 
